--- a/metadata.yaml
+++ b/metadata.yaml
@@ -50,10 +50,11 @@ abstract: >
   users and their associated identity information, authenticating their access
   to the Science Platform, and determining which services they are permitted
   to use.  This tech note collects decisions, analysis, and trade-offs made in
-  the implementation of the system that may be of future interest.  The
-  historical background here may be useful for understanding design and
-  implementation decisions, but would clutter other documents and distract
-  from the details of the system as implemented.
+  the implementation of the system that may be of future interest.  It also
+  collects a list of intended future work.  The historical background here may
+  be useful for understanding design and implementation decisions, but would
+  clutter other documents and distract from the details of the system as
+  implemented.
 
 # URL where this document is published by Read the Docs. e.g. http://sqr-001.lsst.codes
 url: "https://sqr-069.lsst.io"
